docs/envoy/v1.18.2/_sources/api-v3/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto:

Preserve case header formatter
==============================


.. _extension_envoy.http.stateful_header_formatters.preserve_case:

This extension may be referenced by the qualified name *envoy.http.stateful_header_formatters.preserve_case*

.. note::
  

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.http.stateful_header_formatters <extension_category_envoy.http.stateful_header_formatters>`


.. _envoy_v3_api_msg_extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig:

extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
------------------------------------------------------------------------------

`[extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto#L17>`_

Configuration for the preserve case header formatter.
See the :ref:`header casing <config_http_conn_man_header_casing>` configuration guide for more
information.



