docs/envoy/v1.22.0/_sources/api-v3/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto:

Preserve case header formatter
==============================




.. _extension_envoy.http.stateful_header_formatters.preserve_case:

This extension may be referenced by the qualified name ``envoy.http.stateful_header_formatters.preserve_case``

.. note::
  

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.http.stateful_header_formatters <extension_category_envoy.http.stateful_header_formatters>`


.. _envoy_v3_api_msg_extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig:

extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
------------------------------------------------------------------------------

:repo:`[extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig proto] <api/envoy/extensions/http/header_formatters/preserve_case/v3/preserve_case.proto#L18>`

Configuration for the preserve case header formatter.
See the :ref:`header casing <config_http_conn_man_header_casing>` configuration guide for more
information.

.. code-block:: json

  {
    "forward_reason_phrase": "..."
  }

.. _envoy_v3_api_field_extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig.forward_reason_phrase:

forward_reason_phrase
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows forwarding reason phrase text.
  This is off by default, and a standard reason phrase is used for a corresponding HTTP response code.
  
  

